--- a/app/templates/group/group.twig
+++ b/app/templates/group/group.twig
@@ -14,7 +14,7 @@
         <table class="tablesaw tablesaw-stack" data-mode="stack">
             <thead>
                 <tr>
-                    <th>Name</th>
+                    <th>Repo Status</th>
                     <th>Github Source</th>
                     <th>Notification E-mail</th>
                     <th>Repo Details</th>
