--- a/app/templates/repository.push.history.twig
+++ b/app/templates/repository.push.history.twig
@@ -12,9 +12,17 @@
     <ol class="nav--pagination">
         <li class="nav--pagination__prev">
             {% if page > 1 %}
-                <a href="{{ urlFor('push.history', {'id': repo.id, 'page': page-1}) }}"><i class="fa fa-arrow-circle-left"></i> newer</a>
+                <a href="{{ urlFor('push.history', {'id': repo.id, 'page': page-1}) }}">
+                    <svg viewBox="0 0 32 32" class="icon">
+                        <use xlink:href="#caret-left"></use>
+                    </svg>newer
+                </a>
             {% else %}
-                <span class="disabled"><i class="fa fa-arrow-circle-left"></i> newer</span>
+                <span class="disabled">
+                    <svg viewBox="0 0 32 32" class="icon">
+                        <use xlink:href="#caret-left"></use>
+                    </svg>newer
+                </span>
             {% endif %}
         </li>
         <li>
@@ -24,9 +32,17 @@
         </li>
         <li class="nav--pagination__next">
             {% if page < last %}
-                <a href="{{ urlFor('push.history', {'id': repo.id, 'page': page+1}) }}">older <i class="fa fa-arrow-circle-right"></i></a>
+                <a href="{{ urlFor('push.history', {'id': repo.id, 'page': page+1}) }}">
+                    older <svg viewBox="0 0 32 32" class="icon mls">
+                        <use xlink:href="#caret-right"></use>
+                    </svg>
+                </a>
             {% else %}
-                <span class="disabled">older <i class="fa fa-arrow-circle-right"></i></span>
+                <span class="disabled">
+                    older <svg viewBox="0 0 32 32" class="icon mls">
+                        <use xlink:href="#caret-right"></use>
+                    </svg>
+                </span>
             {% endif %}
         </li>
     </ol>
