--- a/app/templates/push.twig
+++ b/app/templates/push.twig
@@ -55,11 +55,11 @@
                     <td>Status</td>
                     <td>
                         {% if push.status == 'Success' %}
-                            <span class="circle-green">{{ push.status }}</span>
+                            <span class="status-before--success">{{ push.status }}</span>
                         {% elseif push.status == 'Error' %}
-                            <span class="circle-red">{{ push.status }}</span>
+                            <span class="status-before--error">{{ push.status }}</span>
                         {% else %}
-                            <span class="circle-orange">{{ push.status }}</span>
+                            <span class="status-before--other">{{ push.status }}</span>
                         {% endif %}
                     </td>
                 </tr>
