Hide removed builds from the rollback page. Fix automatic selection of the deployment relationship on the build push page. fixes #113

--- a/app/templates/build.push.twig
+++ b/app/templates/build.push.twig
@@ -53,11 +53,11 @@
                         <td colspan="4">Unknown</td>
                     {% endif %}
                     <td>
-                        {% if canUserPush(user, deployment.repository.key, deployment.server.environment.key) %}
-                            {% if deployment.id in selected %}
-                                <label>Push Now <input type="checkbox" name="deployments[]" id="sel-{{ deployment.id }}" value="{{ deployment.id }}" checked></label>
+                        {% if canUserPush(user, status.deployment.repository.key, status.deployment.server.environment.key) %}
+                            {% if status.deployment.id in selected %}
+                                <label>Push Now <input type="checkbox" name="deployments[]" id="sel-{{ status.deployment.id }}" value="{{ status.deployment.id }}" checked></label>
                             {% else %}
-                                <label>Push Now <input type="checkbox" name="deployments[]" id="sel-{{ deployment.id }}" value="{{ deployment.id }}"></label>
+                                <label>Push Now <input type="checkbox" name="deployments[]" id="sel-{{ status.deployment.id }}" value="{{ status.deployment.id }}"></label>
                             {% endif %}
                             {% set allowSubmit = true %}
                         {% else %}
