Output the HTML5 time tag and associated datetime attribute when showing dates and times. fixes #122

--- a/app/templates/build.push.twig
+++ b/app/templates/build.push.twig
@@ -48,9 +48,9 @@
                                 </svg>
                             </span>
                         </td>
-                        <td>{{ status.success.end|date }}</td>
+                        <td>{{ status.success.end|reldate }}</td>
                     {% else %}
-                        <td colspan="4">Unknown</td>
+                        <td colspan="4"></td>
                     {% endif %}
                     <td>
                         {% if canUserPush(user, status.deployment.repository.key, status.deployment.server.environment.key) %}
