--- a/app/templates/user/user.twig
+++ b/app/templates/user/user.twig
@@ -10,7 +10,7 @@
             {{ getUsersActualName(profileUser) }}
         {% endblock %}
     </h2>
-    <p>{{ ldapUser.title }} ({{ ldapUser.teamName }})</p>
+    <p>AKA {{ ldapUser.firstName~' '~ldapUser.lastName }}, {{ ldapUser.title }} ({{ ldapUser.teamName }})</p>
 
     <p><img src="{{ profileUser.pictureUrl.asString() }}" width="150"></p>
 
