--- a/app/templates/repository/repository.twig
+++ b/app/templates/repository/repository.twig
@@ -94,16 +94,7 @@
         </tbody>
     </table>
 
-    <h3>Permissions</h3>
-    <ul>
-        {% for pair in permissions %}
-            <li><a href="{{ urlFor('user', {'id': pair.user.id}) }}">{{ pair.user.name }}</a> has permission to build and push to <b>{{ pair.environment.key }}</b>.</li>
-        {% else %}
-            <li>No permissions found for this repository.</li>
-        {% endfor %}
-    </ul>
-
-    <h3>Server deployments:</h3>
+    <h3>Server Deployment Relationships:</h3>
     {% if deployments %}
         <table class="tablesaw tablesaw-stack" data-mode="stack">
             <thead>
@@ -128,7 +119,7 @@
     {% endif %}
 
     {% if isAdmin %}
-        <a class="btn" href="{{ urlFor('repository.deployments', {id: repository.id}) }}">Manage deployments</a>
+        <a class="btn" href="{{ urlFor('repository.deployments', {id: repository.id}) }}">Manage Deployment Relationships</a>
     {% endif %}
 
 {% endblock %}
