--- a/app/templates/hello.twig
+++ b/app/templates/hello.twig
@@ -18,17 +18,80 @@
     <p>I look forward to working with you.</p>
 
     {% if pending %}
-        <h3>Pending Work</h3>
-        <ul>
-            {% for item in pending %}
-                {% if item is build %}
-                    <li>Build</li>
-                {% endif %}
-                {% if item is push %}
-                    <li>Push</li>
-                {% endif %}
-            {% endfor %}
-        </ul>
+        <h3>Pending Tasks</h3>
+        <p>The following tasks have been queued and are currently in process.</p>
+
+        <table class="tablesaw tablesaw-stack" data-mode="stack">
+            <thead>
+                <th>Repository</th>
+                <th>Action</th>
+                <th>Status</th>
+                <th>Source</th>
+                <th>Destination</th>
+                <th>Initiator</th>
+            </thead>
+            <tbody>
+                {% for item in pending %}
+                    <tr>
+                        <td>
+                            {% if item is build %}
+                                <a href="{{ urlFor('repository.status', {'id': item.repository.id}) }}">{{ item.repository.key }}</a>
+                            {% endif %}
+                            {% if item is push %}
+                                <a href="{{ urlFor('repository.status', {'id': item.build.repository.id}) }}">{{ item.build.repository.key }}</a>
+                            {% endif %}
+                        </td>
+                        <td>
+                            {% if item is build %}
+                                <a href="{{ urlFor('build', {'build': item.id}) }}">Build</a>
+                            {% endif %}
+                            {% if item is push %}
+                                <a href="{{ urlFor('push', {'push': item.id}) }}">Push</a>
+                            {% endif %}
+                        </td>
+                        <td>
+                            {% if item.status == 'Success' %}
+                                <span class="status-before--success">{{ item.status }}</span>
+                            {% elseif item.status in ['Error', 'Removed'] %}
+                                <span class="status-before--error">{{ item.status }}</span>
+                            {% else %}
+                                <span class="status-before--other">{{ item.status }}</span>
+                            {% endif %}
+                        </td>
+                        <td>
+                            {% if item is build %}
+                                Commit <a href="{{ githubCommit(item.repository.githubUser, item.repository.githubRepo, item.commit) }}">{{ item.commit|commit }}</a>
+                                <span class="icon">
+                                    <svg viewBox="0 0 32 32">
+                                        <use xlink:href="#github"></use>
+                                    </svg>
+                                </span>
+                            {% endif %}
+                            {% if item is push %}
+                                Build <a href="{{ urlFor('build', {'build': item.build.id}) }}">{{ item.build.id[:10] }}</a>
+                            {% endif %}
+                        </td>
+                        <td>
+                            {% if item is build %}
+                                Build <a href="{{ urlFor('build', {'build': item.id}) }}">{{ item.id[:10] }}</a>
+                            {% endif %}
+                            {% if item is push %}
+                                <a href="{{ urlFor('server', {'id': item.deployment.server.id }) }}">{{ item.deployment.server.name }}</a> ({{ item.deployment.server.environment.key }})
+                            {% endif %}
+                        </td>
+                        <td>
+                            {% if item.user %}
+                                <a href="{{ urlFor('user', {'id': item.user.id}) }}">{{ item.user.name[:20] }}</a>
+                            {% elseif item.consumer %}
+                                {{ item.consumer.name[:20] }}
+                            {% else %}
+                                Unknown
+                            {% endif %}
+                        </td>
+                    </tr>
+                {% endfor %}
+            </tbody>
+        </table>
     {% endif %}
 
     {% if repos %}
