--- a/app/templates/environment/environment.twig
+++ b/app/templates/environment/environment.twig
@@ -21,10 +21,8 @@
     <div>
         {% if isAdmin %}
             <a class="btn--action" href="{{ urlFor('environment.admin.edit', {id: env.id}) }}">Edit</a>
-            {% if not servers  and canUserDelete(currentUser) %}
-                <form class="secondary-action" action="{{ urlFor('environment.admin.remove.handle', {id: env.id}) }}" method="post">
-                    <input class="btn--destructive" type="submit" value="Remove">
-                </form>
+            {% if not servers and canUserDelete(currentUser) %}
+                <a class="btn--destructive secondary-action" href="{{ urlFor('environment.admin.remove.handle', {id: env.id}) }}">Remove Environment</a>
             {% endif %}
         {% endif %}
     </div>
